Balance the column count for each flex element to avoid stretching the image

--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,6 @@ body {
 /* Go no further tha 98% of the height for the img preview */
 #fakecanvas {
 	height: 98vh;
-	width: 100%;
 }
 
 @media (min-width: 1300px) {
